--- a/CapEAT/UI_CapEat/src/index.html
+++ b/CapEAT/UI_CapEat/src/index.html
@@ -8,8 +8,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" />
+  
 </head>
+
+
 <body>
+   
+  
   <app-root></app-root>
+<div class="container-fluid"></div>
+
 </body>
 </html>
